--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New bookmark for list <%= @list.name %></h1>
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
+  <%= f.association :movie %> <%# incluimos o movie_id foreign key para mostrar e fazer a associação do bookmark com um movie %>
   <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
 <% end %>
